# ats-system

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: sync_skills.py
.claude/skills/: agents.md  generators.md  scripts.md  systems.md
LLMs/embeding/: all_MiniLM_L6_v2.py
LLMs/word_extractor/: ml6team.py
notebooks/: ranking_similarity_rbo.ipynb  token_distribution.ipynb
scr/: compute_emb_scores.py  compute_keyword_match_scores.py  compute_kw_match_scores.py  compute_ml6_keyword_match_scores.py  compute_ml6_kw_match_scores.py
scripts/: compute_all_rankings.py  compute_emb_scores.py  compute_hybrid_ranking.py  compute_kw_match_scores.py  compute_ml6_kw_match_scores.py  compute_sliding_window_ranking.py  count_tokens.py  count_tokens_stats.py  generate_synthetic_cvs.py  hrflow_ranker.py  launch_cv_optimizer_agent.py  launch_one_shot_cv_optimizer.py
src/ats_system/: __init__.py  config.py  llm.py  results_io.py
src/ats_system/agents/: __init__.py  cv_optimizer_agent.py  dataset_loading.py  dataset_rankers.py  one_shot_cv_optimizer.py
src/ats_system/data/: __init__.py  loaders.py  pdf_loader.py  (+1 more)
test/: test_emb_score.py  test_import_pdf.py  test_keyword_match_score.py  test_kw_match_score.py  test_ml6_keyword_match_score.py  test_ml6_kw_match_score.py  test_ml6team_extractor.py
tests/: test_cv_optimizer_agent.py  test_emb_score.py  test_import_pdf.py  test_kw_match_score.py  test_ml6_kw_match_score.py  test_ml6team_extractor.py
tools/: data_manager.py  emb_scores.py  kw_scores.py  scores.py
(+17 files in other folders)
