[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-system"
version = "0.1.0"
description = "Système ATS (Applicant Tracking System) : scoring de CVs face à une offre d'emploi."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf",
    "nltk",
    "sentence-transformers",
    "transformers",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "matplotlib",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
src = ["src", "scripts", "tests"]
